--- a/index.html
+++ b/index.html
@@ -8,18 +8,34 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 20px;
+            padding: 40px;
+            background-color: #f5f5f5;
+            line-height: 1.6;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         h1 {
-            color: #333;
+            color: #2c3e50;
+            border-bottom: 2px solid #3498db;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
         }
         p {
-            color: #666;
+            color: #555;
+            font-size: 18px;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to New Society</h1>
-    <p>This is a simple test page for our new project.</p>
+    <div class="container">
+        <h1>Welcome to New Society</h1>
+        <p>This is a simple test page for our new project.</p>
+    </div>
 </body>
 </html>
