--- a/index.html
+++ b/index.html
@@ -8,34 +8,32 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 40px;
-            background-color: #f5f5f5;
+            padding: 20px;
             line-height: 1.6;
+            background-color: #f5f5f5;
         }
         .container {
             max-width: 800px;
             margin: 0 auto;
+            padding: 20px;
             background-color: white;
-            padding: 30px;
-            border-radius: 10px;
+            border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         h1 {
             color: #2c3e50;
             border-bottom: 2px solid #3498db;
             padding-bottom: 10px;
-            margin-bottom: 20px;
         }
         p {
-            color: #555;
-            font-size: 18px;
+            color: #444;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Welcome to New Society</h1>
-        <p>This is a simple test page for our new project.</p>
+        <p>This is a simple test page for our new society project.</p>
     </div>
 </body>
 </html>
